# DesGpu

./: .gitignore  CMakeLists.txt  README.md
constants/: CMakeLists.txt  key_map.cpp  key_map.hpp  main.cpp  salt_indices.cpp  salt_indices.hpp
salt/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  DES_kernel.cu  base64.cpp  base64.hpp  benchmark.cpp  benchmark.hpp  cuda_utils.cpp  cuda_utils.hpp  des.cu  des_base64.cpp  des_base64.hpp  des_bitslice.cpp  des_crypter.cpp  des_crypter.hpp  des_encrypter.cpp  des_encrypter.hpp  des_kernel.cu  des_kernel.h  des_kernel_encrypt.h  des_kernel_key_map.h  des_kernel_params.h  des_kernel_salt_dispatch.cpp  des_kernel_salt_dispatch.cu  des_kernel_salt_dispatch.h  des_kernel_salt_dispatch.hpp  des_kernel_salt_instances.h  des_kernel_salt_instances_0.cu  des_kernel_salt_instances_1024.cu  des_kernel_salt_instances_1152.cu  des_kernel_salt_instances_128.cu  des_kernel_salt_instances_1280.cu  des_kernel_salt_instances_1408.cu  des_kernel_salt_instances_1536.cu  des_kernel_salt_instances_1664.cu  des_kernel_salt_instances_1792.cu  des_kernel_salt_instances_1920.cu  des_kernel_salt_instances_2048.cu  des_kernel_salt_instances_2176.cu  des_kernel_salt_instances_2304.cu  des_kernel_salt_instances_2432.cu  (+27 more)
test/: all_tests.cpp  assert_equal.cpp  assert_equal.hpp  generate_test_keys.ipynb  run_all_tests.cpp  run_all_tests.hpp  test_base64.cpp  test_base64.hpp  test_des_base64.cpp  test_des_base64.hpp  test_des_crypter.cpp  test_des_crypter.hpp  test_des_encrypter.cpp  test_des_encrypter.hpp  test_keys_buffer.cpp  test_keys_buffer.hpp  test_passwords_salt01.txt  test_passwords_saltXY.txt
